force-app/main/default/objects/Account/fields/anu_id__c.field-meta.xml
<CustomField>
    <fullName>anu_id__c</fullName>
    <externalId>true</externalId>
    <label>anu_id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>