force-app/main/default/objects/Account/fields/roll_back_kccc__c.field-meta.xml
<CustomField>
    <fullName>roll_back_kccc__c</fullName>
    <label>roll back kcc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>rollback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>