force-app/main/default/objects/Account/fields/test_rollback__c.field-meta.xml
<CustomField>
    <fullName>test_rollback__c</fullName>
    <label>test rollback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>rollback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>